WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142311
<attachment> should not appear selected when the cursor is adjacent to it
https://bugs.webkit.org/show_bug.cgi?id=142311
Summary
<attachment> should not appear selected when the cursor is adjacent to it
Tim Horton
Reported
2015-03-04 15:01:00 PST
<attachment> should not appear selected when the cursor is adjacent to it
Attachments
Patch
(3.69 KB, patch)
2015-03-04 15:04 PST
,
Tim Horton
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-03-04 15:04:34 PST
Created
attachment 247899
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2015-03-04 15:07:37 PST
<
rdar://problem/20045862
>
Tim Horton
Comment 3
2015-03-04 17:41:50 PST
http://trac.webkit.org/changeset/181057
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug