<attachment> should not appear selected when the cursor is adjacent to it https://bugs.webkit.org/show_bug.cgi?id=142311 <rdar://problem/20045862>

Reviewed by Dean Jackson.

* rendering/RenderAttachment.cpp:
(WebCore::RenderAttachment::isSelected): Deleted.
* rendering/RenderAttachment.h:
* rendering/RenderThemeMac.mm:
(WebCore::titleTextColorForAttachment):
(WebCore::RenderThemeMac::paintAttachment):
(WebCore::labelTextColorForAttachment): Deleted.
We were using the wrong (and far too complicated) mechanism to determine
if the attachment is selected (to decide which highlight color to use).
Instead, just check selectionState().


Canonical link: https://commits.webkit.org/160352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181057 268f45cc-cd09-0410-ab3c-d52691b4dbfc